Add `inserted_at` to goals
